Closed Bug 1653700 Opened 6 years ago Closed 5 years ago

Can't zoom Bing Maps using trackpad scroll gesture with apz.windows.use_direct_manipulation = true

Categories

(Core :: Panning and Zooming, defect)

Unspecified
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- disabled
firefox78 --- disabled
firefox79 --- disabled
firefox80 --- fixed

People

(Reporter: cpeterson, Assigned: tnikkel)

References

(Regression, )

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce

  1. Load https://www.bing.com/maps/.
  2. Try to zoom the map in or out using trackpad scroll gesture.

Expected result

The map should zoom in and out.

Actual result

The map doesn't zoom with the trackpad scroll gesture, but I can zoom the map using a pinch gesture on my laptop's touchscreen or clicking the maps' +/- buttons.

I'm using Windows 10. I haven't tested any other platform. Note that I can't reproduce this problem in a clean profile, only my regular profile. To bisect this problem, I had to clone my regular profile in mozregression.

I don't know if this Bing Maps problem is related, but I've had intermittent problems for months where Nightly would stop responding to my trackpad scroll gestures entirely, in all tabs. I wouldn't be able to scroll web pages using my trackpad. I would have to click and drag the scrollbar or navigate using cursor keys. I didn't have good STR and the problem would usually go away after a minute or so.

Flags: needinfo?

@ tnikkel, I think this bug is a regression from your changes for direct manipulation bug 1630912 in Firefox 78. Looks like I had manually set the apz.windows.use_direct_manipulation pref = true a few months ago. I can make the zoom problem go away by toggling apz.windows.use_direct_manipulation in a clean profile.

I bisected this bug to the following pushlog:

https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=49df0c8504b8521913eca4fc6163017e0133e6bb&tochange=804dc7924101573ca673d3eb16ca28bd29235b96

Flags: needinfo? → needinfo?(tnikkel)
Summary: Can't zoom Bing Maps using trackpad scroll gesture → Can't zoom Bing Maps using trackpad scroll gesture with apz.windows.use_direct_manipulation = true
Flags: needinfo?(tnikkel)

Thanks for the report and for bisecting and testing with the flipped pref!

Flags: needinfo?(tnikkel)

Similar observations as bug 1644952 comment 2. Looks like dmanip scroll gestures don't send DOMMouseScroll events.

The macOS widget code puts something in the PanGestureInput::mLineOrPageDeltaY here

https://searchfox.org/mozilla-central/rev/d6d8fcc22c3820f2ae08229e0d37be19fba74db9/widget/cocoa/nsChildView.mm#3491

but we have nothing for d manip doing the same. So in EventStateManager::DispatchLegacyMouseScrollEvents the scrollDeltaY is always 0 and we never dispatch a DOMMouseScroll event.

Flags: needinfo?(tnikkel)
Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
Attachment #9164502 - Attachment description: Bug 1653700. Populate PanGestureInput::mLineOrPageDeltaX/Y when they are produced from direct manipulation. r?kats → Bug 1653700. Populate PanGestureInput::mLineOrPageDeltaX/Y when the events are produced from direct manipulation. r=kats
Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/bd88950d6cec Populate PanGestureInput::mLineOrPageDeltaX/Y when the events are produced from direct manipulation. r=kats
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
See Also: → 1658001
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: