Bug 1653700. Populate PanGestureInput::mLineOrPageDeltaX/Y when the events are produced from direct manipulation. r=kats

The macOS widget code already does this here

https://searchfox.org/mozilla-central/rev/d6d8fcc22c3820f2ae08229e0d37be19fba74db9/widget/cocoa/nsChildView.mm#3491

So we factor our a helper from the macOS widget code (which already does this) to use cross platform.

Differential Revision: https://phabricator.services.mozilla.com/D84059